<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView1"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:padding="23px"
        android:text="@string/txtView1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123"
        tools:text="@string/txtView1" />

    <EditText
        android:id="@+id/txtEdit1"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:inputType="number"
        android:padding="10px"
        android:text="@string/txtEdit1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:text="@string/txtEdit1" />

    <EditText
        android:id="@+id/txtEdit2"
        android:layout_width="109dp"
        android:layout_height="34dp"
        android:inputType="number"
        android:padding="10px"
        android:text="@string/txtEdit2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        tools:text="@string/txtEdit2" />

    <EditText
        android:id="@+id/txtEdit3"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:inputType="number"
        android:padding="10px"
        android:text="@string/txtEdit3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259"
        tools:text="@string/txtEdit3" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSubmit"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"
        tools:text="@string/btn1" />

    <TextView
        android:id="@+id/txtView4"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:padding="20px"
        android:text="@string/txtView4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:text="@string/txtView4" />

    <TextView
        android:id="@+id/txtView3"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:padding="20px"
        android:text="@string/txtView3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:text="@string/txtView3" />

    <TextView
        android:id="@+id/txtView2"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:padding="20px"
        android:text="txtView2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709"
        tools:text="@string/txtView2" />

</androidx.constraintlayout.widget.ConstraintLayout>